[package]
name = "lib-neural-mesh"
version = "0.2.0"
edition = "2021"
authors = ["Sovereign Network Team"]
description = "ML/AI optimization layer for routing and compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SOVEREIGN-NET/neural-mesh-ml"

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"

# ML
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
bincode = "1.3"
tract-onnx = { version = "0.21", optional = true }

# Performance
rayon = "1.10"

# Utilities
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
onnx = ["dep:tract-onnx"]

[[example]]
name = "neural_mesh_demo"
path = "examples/neural_mesh_demo.rs"
